test/libhyperion/syntaxTests/iceRegressionTests/const_struct_with_mapping.hyp
contract C {
    // TODO(rgeraldes24): review
    struct S {
        mapping(uint => uint) c;
    }
    S public constant e = 0x1212121212121212121212121212121212121212; // TODO(rgeraldes24)
}
// ----
// TypeError 9259: (71-135): Only constants of value type and byte array type are implemented.
